# BeatPlug

./: README.md  pyproject.toml  show_pyaudio_devices.py  stream_analyzer.py  stream_reader_pyaudio.py  stream_reader_sounddevice.py  utils.py  visualise.py  visualizer.py
Listener/: platformio.ini
Listener/src/: main.cpp
Player/: pyproject.toml  stream_analyzer.py  stream_reader_pyaudio.py  stream_reader_sounddevice.py  utils.py  visualise.py  visualizer.py
